--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,35 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+
+@Article{MarcoNuno_Revista_2025_08_02,
+AUTHOR = {Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Said Polanco-Martagón and Guadalupe Acosta-Villarreal and Rubén Posada-Gómez },
+TITLE = {Unsupervised Optical Mark Recognition on Answer Sheets for Massive Printed Multiple-Choice Tests},
+JOURNAL = {Journal of Imaging},
+VOLUME = {11},
+YEAR = {2025},
+NUMBER = {9},
+ARTICLE-NUMBER = {308},
+URL = {https://www.mdpi.com/2313-433X/11/9/308},
+ISSN = {2313-433X},
+DOI = {10.3390/jimaging11090308}
+}
+
+
+% LatinIndex
+@Article{MarcoNuno_Revista_2025_05_00,
+    author={Juan Eduardo Tovar-D{\'\i}az and Said Polanco-Martag{\'o}n and \textbf{M. A. Nuño-Maganda} and Yahir Hern{\'a}ndez-Mier and Mario Enrique Garc{\'\i}a-Luna}
+	TITLE = "{Phonocardiogram Classification Using Neural Networks for Anomaly Heart Detection}",
+	YEAR = "2025",
+	month = {05},
+	JOURNAL = "Research in Computing Science",
+	VOLUME = "154",
+    number = {5},
+    URL = {https://www.rcs.cic.ipn.mx/2025_154_5/Phonocardiogram%20Classification%20Using%20Neural%20Networks%20for%20Anomaly%20Heart%20Detection.html},
+	note = "{\textbf{{ISSN:  1870-4069}}}"
+}
+
+
 % Book Chapter que cuenta como revista de acuerdo con CONACSHIT
 @incollection{MarcoNunoBookChapter_2025A,
   author      = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón and José Hugo Barrón-Zambrano and Juan Carlos Elizondo-Leal and Alan Díaz-Manriquez",
