--- a/Revistas.bib
+++ b/Revistas.bib
@@ -2,6 +2,18 @@
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
 
+@Article{MarcoNuno_Revista_2025_08_02,
+    AUTHOR = {Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Said Polanco-Martagón and Guadalupe Acosta-Villarreal and Rubén Posada-Gómez },
+    TITLE = {Unsupervised Optical Mark Recognition on Answer Sheets for Massive Printed Multiple-Choice Tests},
+    JOURNAL = {Journal of Imaging},
+    VOLUME = {11},
+    YEAR = {2025},
+    NUMBER = {9},
+    ARTICLE-NUMBER = {308},
+    URL = {https://www.mdpi.com/2313-433X/11/9/308},
+    ISSN = {2313-433X},
+    DOI = {10.3390/jimaging11090308}
+}
 
 % Book Chapter que cuenta como revista de acuerdo con CONACSHIT
 @incollection{MarcoNunoBookChapter_2025A,
