--- a/Revistas.bib
+++ b/Revistas.bib
@@ -9,6 +9,7 @@
     VOLUME = {11},
     YEAR = {2025},
     NUMBER = {9},
+    month       = {08},
     ARTICLE-NUMBER = {308},
     URL = {https://www.mdpi.com/2313-433X/11/9/308},
     ISSN = {2313-433X},
