--- a/Revistas.bib
+++ b/Revistas.bib
@@ -16,6 +16,21 @@
     DOI = {10.3390/jimaging11090308}
 }
 
+
+% LatinIndex
+@Article{MarcoNuno_Revista_2025_05_00,
+    author={Juan Eduardo Tovar-Díaz and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Mario Enrique García-Luna}
+	TITLE = "{Phonocardiogram Classification Using Neural Networks for Anomaly Heart Detection}",
+	YEAR = "2025",
+	month = {05},
+	JOURNAL = "Research in Computing Science",
+	VOLUME = "154",
+    number = {5},
+    URL = {https://www.rcs.cic.ipn.mx/2025_154_5/Phonocardiogram%20Classification%20Using%20Neural%20Networks%20for%20Anomaly%20Heart%20Detection.html},
+	note = "{\textbf{ISSN:  1870-4069}}"
+}
+
+
 % Book Chapter que cuenta como revista de acuerdo con CONACSHIT
 @incollection{MarcoNunoBookChapter_2025A,
   author      = "\textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagón and José Hugo Barrón-Zambrano and Juan Carlos Elizondo-Leal and Alan Díaz-Manriquez",
