--- a/Revistas.bib
+++ b/Revistas.bib
@@ -19,7 +19,7 @@
 
 % LatinIndex
 @Article{MarcoNuno_Revista_2025_05_00,
-    author={Juan Eduardo Tovar-Díaz and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Mario Enrique García-Luna}
+    author={Juan Eduardo Tovar-Díaz and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Mario Enrique García-Luna},
 	TITLE = "{Phonocardiogram Classification Using Neural Networks for Anomaly Heart Detection}",
 	YEAR = "2025",
 	month = {05},
