--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
-
+% JCR 
 @Article{MarcoNuno_Revista_2025_08_02,
     AUTHOR = {Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Said Polanco-Martagón and Guadalupe Acosta-Villarreal and Rubén Posada-Gómez },
     TITLE = {Unsupervised Optical Mark Recognition on Answer Sheets for Massive Printed Multiple-Choice Tests},
@@ -27,6 +27,20 @@
 	VOLUME = "154",
     number = {5},
     URL = {https://www.rcs.cic.ipn.mx/2025_154_5/Phonocardiogram%20Classification%20Using%20Neural%20Networks%20for%20Anomaly%20Heart%20Detection.html},
+	note = "{\textbf{ISSN:  1870-4069}}"
+}
+
+
+% LatinIndex
+@Article{MarcoNuno_Revista_2025_05_01,
+    author={Raul Bautista-Arroyo and Jorge de la Calleja and \textbf{M. A. Nuño-Maganda} and María Auxilio Medina-Nieto},
+	TITLE = "{Verificación automática de presentaciones usando inteligencia artificial}",
+	YEAR = "2025",
+	month = {05},
+	JOURNAL = "Research in Computing Science",
+	VOLUME = "154",
+    number = {9},
+    URL = {https://www.rcs.cic.ipn.mx/2025_154_9/Verificacion%20automatica%20de%20presentaciones%20usando%20inteligencia%20artificial.html},
 	note = "{\textbf{ISSN:  1870-4069}}"
 }
 
