--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -7,7 +7,28 @@
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 % Escenario 4: NO se presento en el congreso [Pero el congreso genero constancia](CONSTANCIA) y NO se publico (No se mando version solicitada, Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
-% Escenario 3 - Congreso  - COMIA 2025
+% Escenario 1 - Congreso  - COMIA 2025 - Communications on NOSE QUE MADRES
+@unpublished{Difusion2025c,
+    author = {Luis González-Castro and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier and Christian Saldaña-Calderón},
+	title = {AutoML for Music Classification},
+    howpublished = {XVII Congreso Mexicano de Inteligencia Artificial - COMIA 2025},
+    year = 2025,
+    month = 05,
+    addendum     = {Ciudad de México, México}}
+
+
+
+% Escenario 1 - Congreso  - COMIA 2025 - Communications on NOSE QUE MADRES
+@unpublished{Difusion2025b,
+    author = {Christian Saldaña-Calderon and Said Polanco-Martagón and Luis González-Castro and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}},
+	title = {Evaluation of Audio Transformations Techniques for Pulmonary Sound Classification Using CNN and AutoML},
+    howpublished = {XVII Congreso Mexicano de Inteligencia Artificial - COMIA 2025},
+    year = 2025,
+    month = 05,
+    addendum     = {Ciudad de México, México}}
+
+
+% Escenario 1 - Congreso  - COMIA 2025 - Research in Computing Science
 @unpublished{Difusion2025a,
     author = {Juan Tovar-Díaz and Said Polanco-Martagón and \textbf{M. A. Nuño-Maganda} and Mario García-Luna},
 	title = {Phonocardiogram classification using Neural Networks for anomaly heart detection},
@@ -16,6 +37,8 @@
     year = 2025,
     month = 05,
     addendum     = {Ciudad de México, México}}
+
+
 
 
 % Escenario 1 - Congreso  - CONACIC 2024- PAper 52
