--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{104}
+\setcounter{conteoarticulos}{107}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -14,6 +14,12 @@
 \multicolumn{3}{c}{Continúa en la siguiente página} \\ 
 \endfoot 
 \endlastfoot 
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_08_02}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_05_01}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_05_00}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNunoBookChapter_2025A}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2024_12_00}&\\ \hline 
