--- a/RevistasArbitradaEspanol.bib
+++ b/RevistasArbitradaEspanol.bib
@@ -2,7 +2,7 @@
 
 
 @Article{MarcoNuno_CongArbEsp_2022_12_01,
-	author = {Dino Tonatiuh Gutierrez-Martinez and Marlly Yuleth Cantú-Charles and Jesus Eduardo Uriegas-Ibarra and \textbf{Marco Aurelio Nuño-Maganda} },
+	author = {Dino Tonatiuh Gutierrez-Martinez and Marlly Yuleth Cantú-Charles and Jesus Eduardo Uriegas-Ibarra and \textbf{M. A. Nuño-Maganda} },
 	title = {{Simulación de brazo robótico en dispositivos móviles utilizando OpenGL ES}},
 	journal = {Difu100ci@, Revista De difusión científica, ingeniería Y tecnologías},
 	year = {2022},	
@@ -14,7 +14,7 @@
 }
 
 @Article{MarcoNuno_CongArbEsp_2022_12_02,
-	author = {David Josué Esquivel-Godoy and   \textbf{Marco Aurelio Nuño-Maganda} and  Yahir Hernández-Mier and  Said Polanco-Martagón},
+	author = {David Josué Esquivel-Godoy and   \textbf{M. A. Nuño-Maganda} and  Yahir Hernández-Mier and  Said Polanco-Martagón},
 	title = {Módulos de supervisión y automatización de un sistema hidropónico mediante lógica difusa y visión por computadora},
 	journal = {Difu100ci@, Revista De difusión científica, ingeniería Y tecnologías},
 	year = {2022},	
@@ -27,7 +27,7 @@
 
 
 @Article{MarcoNuno_CongArbEsp_2022_12_03,
-	author = {\textbf{Marco Aurelio Nuño-Maganda} and Axel Issai Alemán-Delgado  and  Isaac De Jesús Becerra-Martínez  and  Karen Lizeth García-Rivera  and  Didre Dayan Mota-González  and  Daniela Estefanía Huerta-Vázquez  and  Carlos Alejandro Reyes-Puga},
+	author = {\textbf{M. A. Nuño-Maganda} and Axel Issai Alemán-Delgado  and  Isaac De Jesús Becerra-Martínez  and  Karen Lizeth García-Rivera  and  Didre Dayan Mota-González  and  Daniela Estefanía Huerta-Vázquez  and  Carlos Alejandro Reyes-Puga},
 	title = {{Integración de un escanner 3D con sensores ultrasónicos y una aplicación móvil para visualización de modelos tridimensionales}},
 	journal = {Difu100ci@, Revista De difusión científica, ingeniería Y tecnologías},
 	year = {2022},	
@@ -41,7 +41,7 @@
 
 % Encoding: UTF-8
 @Article{ MarcoNuno_RevistaESP_2012_04_00,
-	AUTHOR = "Miguel Morales-Sandoval and \textbf{Marco Aurelio Nuño-Maganda}",
+	AUTHOR = "Miguel Morales-Sandoval and \textbf{M. A. Nuño-Maganda}",
 	TITLE = "{Aplicaciones del Cómputo Reconfigurable: Casos de estudio en Criptografía y Visión por Computadora}",
 	YEAR = "2012",
 	month = apr,
