--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -56,6 +56,15 @@
   Year                     = {2025}
 }
 
+@Misc{TesisUPV2025-07,
+  Title                    = {\textit{Desarrolllo de modulo en el sistema integral del departamento de compras y del área juridica}}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {8},
+  Author                   = {{José Guadalupe Martínez Herrera}},
+  Year                     = {2025}
+}
+
+
 
 @Misc{TesisUPV2024-01,
   Title                    = {\textit{Migración del SIC - Creación de Nuevos Modulos Académicos para el Sistema Integral del Cobat (SIC) del Colegio de Bachilleres del Estado de Tamaulipas}},
