--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -57,7 +57,7 @@
 }
 
 @Misc{TesisUPV2025-07,
-  Title                    = {\textit{Desarrolllo de modulo en el sistema integral del departamento de compras y del área juridica}}},
+  Title                    = {\textit{Desarrolllo de modulo en el sistema integral del departamento de compras y del área juridica}},
   HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
   Month                    = {8},
   Author                   = {{José Guadalupe Martínez Herrera}},
