--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{107}
+\setcounter{conteoarticulos}{109}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -21,6 +21,10 @@
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_05_00}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNunoBookChapter_2025A}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_21}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2024_12_00}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
