--- a/CongresosArb.bib
+++ b/CongresosArb.bib
@@ -1,6 +1,49 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF-8
 
+@InProceedings{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20,
+author="Gonz{\'a}lez Castro, Luis Antonio
+and Martag{\'o}n, Said Polanco
+and \textbf{M. A. Nuño-Maganda}
+and Mier, Yahir Hern{\'a}ndez
+and Salda{\~{n}}a Calder{\'o}n, Christian Alejandro",
+editor="Mart{\'i}nez-Villase{\~{n}}or, Lourdes
+and Mart{\'i}nez-Seis, Bella
+and Pichardo, Obdulia",
+title="AutoML for Music Classification",
+  Doi                      = {10.1007/978-3-031-97907-1_20},
+  Month                    = 10,
+booktitle="Artificial Intelligence -- COMIA 2025",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="257--268",
+isbn="978-3-031-97907-1"
+}
+
+
+@InProceedings{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_21,
+author="Salda{\~{n}}a Calder{\'o}n, Christian Alejandro
+and Martag{\'o}n, Said Polanco
+and Gonz{\'a}lez Castro, Luis Antonio
+and Hern{\'a}ndez Mier, Yahir
+and \textbf{M. A. Nuño-Maganda}",
+editor="Mart{\'i}nez-Villase{\~{n}}or, Lourdes
+and Mart{\'i}nez-Seis, Bella
+and Pichardo, Obdulia",
+title="Evaluation of Audio Transformation Techniques for Pulmonary Sound Classification Using CNN and AutoML",
+  Doi                      = {10.1007/978-3-031-97907-1_21},
+  Month                    = 10,
+booktitle="Artificial Intelligence -- COMIA 2025",
+year="2025",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="269--281",
+isbn="978-3-031-97907-1"
+}
+
+
+
 
 @InProceedings{MarcoNuno_CongArbIng_2005_09_00,
   Title                    = {{Real-Time FPGA-Based Architecture for Bicubic Interpolation: An Application for Digital Image Scaling}},
