--- a/CongresosArb.bib
+++ b/CongresosArb.bib
@@ -2,11 +2,11 @@
 % Encoding: UTF-8
 
 @InProceedings{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20,
-author="Gonz{\'a}lez Castro, Luis Antonio
-and Martag{\'o}n, Said Polanco
+author="Gonz{\'a}lez-Castro, Luis Antonio
+and Martag{\'o}n, Said-Polanco
 and \textbf{M. A. Nuño-Maganda}
-and Mier, Yahir Hern{\'a}ndez
-and Salda{\~{n}}a Calder{\'o}n, Christian Alejandro",
+and Hern{\'a}ndez-Mier, Yahir 
+and Salda{\~{n}}a-Calder{\'o}n, Christian Alejandro",
 editor="Mart{\'i}nez-Villase{\~{n}}or, Lourdes
 and Mart{\'i}nez-Seis, Bella
 and Pichardo, Obdulia",
@@ -23,10 +23,10 @@ isbn="978-3-031-97907-1"
 
 
 @InProceedings{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_21,
-author="Salda{\~{n}}a Calder{\'o}n, Christian Alejandro
-and Martag{\'o}n, Said Polanco
-and Gonz{\'a}lez Castro, Luis Antonio
-and Hern{\'a}ndez Mier, Yahir
+author="Salda{\~{n}}a-Calder{\'o}n, Christian Alejandro
+and Polanco-Martag{\'o}n, Said 
+and Gonz{\'a}lez-Castro, Luis Antonio
+and Hern{\'a}ndez-Mier, Yahir
 and \textbf{M. A. Nuño-Maganda}",
 editor="Mart{\'i}nez-Villase{\~{n}}or, Lourdes
 and Mart{\'i}nez-Seis, Bella
