--- a/CongresosArb.bib
+++ b/CongresosArb.bib
@@ -3,7 +3,7 @@
 
 @InProceedings{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20,
 author="Gonz{\'a}lez-Castro, Luis Antonio
-and Martag{\'o}n, Said-Polanco
+and Polanco-Martag{\'o}n, Said
 and \textbf{M. A. Nuño-Maganda}
 and Hern{\'a}ndez-Mier, Yahir 
 and Salda{\~{n}}a-Calder{\'o}n, Christian Alejandro",
