--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,8 +1,22 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+% JCR
+@Article{MarcoNuno_Revista_2025_10_21,
+    AUTHOR = {Said Polanco-Martagón  and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and José Hugo Barrón-Zambrano and Andrea Magadán-Salazar and César Alejandro Medellín-Vergara},
+    TITLE = {Comparison of Deep Neural Networks for the Classification of Adventitious Lung Sounds},
+    JOURNAL = {Journal of Clinical Medicine},
+    VOLUME = {14},
+    YEAR = {2025},
+    NUMBER = {20},
+    ARTICLE-NUMBER = {7427},
+    ISSN = {2077-0383},
+    DOI = {10.3390/jcm14207427}
+}
+
+
 % JCR 
-@Article{MarcoNuno_Revista_2025_08_02,
+@Article{MarcoNuno_Revista_2025_09_02,
     AUTHOR = {Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Said Polanco-Martagón and Guadalupe Acosta-Villarreal and Rubén Posada-Gómez },
     TITLE = {Unsupervised Optical Mark Recognition on Answer Sheets for Massive Printed Multiple-Choice Tests},
     JOURNAL = {Journal of Imaging},
