--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,3 +1,19 @@
+@misc{2025_EvaluadorProyectos,
+  Author = {},  
+  TITLE = {Comisión de Evaluación de Proyectos de la Fase Estatal del Certamen Estatal Creatividad e Innovación Tecnológica ExpoCiencias Tamaulipas 2025.},
+  YEAR = 2025,
+  month=oct,
+  HOWPUBLISHED = {}}
+
+
+@misc{2025_SECIHTI,
+  Author = {},  
+  TITLE = {Evaluador de la Convocatoria Becas de Posgrado en Ciencias y Humanidades en el Extranjero 2025},
+  YEAR = 2025,
+  month=ago,
+  HOWPUBLISHED = {13-Agosto-2025}}
+
+
 @misc{2025_DYCTA-UPV,
   Author = {},  
   TITLE = {Miembro del Nucleo Académico Básico (NAB) del Doctorado en Ciencias y Tecnologías Avanzadas de la UPV},
