--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{109}
+\setcounter{conteoarticulos}{111}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -18,7 +18,11 @@
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_21}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
-\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_08_02}&\\ \hline 
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_10_21}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_10_28}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_09_02}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2025_05_01}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
