--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,20 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+@Article{MarcoNuno_Revista_2025_10_28,
+    author = {\textbf{M. A. Nuño-Maganda}  and Amador-Cano, Gerardo and Hernández-Mier, Yahir and Saenz-Aguilar, Yessil Varinka and Polanco-Martagón, Said},
+    title = {Automatic Detection and Counting of Nannochloropsis oceanica Microalgae: A Comparative Study of Classical Machine Learning Versus Deep Learning–Based Approaches},
+    journal = {Aquaculture, Fish and Fisheries},
+    volume = {5},
+    number = {6},
+    month       = {10},
+    pages = {e70129},
+    keywords = {computer vision, machine learning, microalgae counting},
+    doi = {10.1002/aff2.70129},  
+    year = {2025}
+}
+
+
 % JCR
 @Article{MarcoNuno_Revista_2025_10_21,
     AUTHOR = {Said Polanco-Martagón  and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and José Hugo Barrón-Zambrano and Andrea Magadán-Salazar and César Alejandro Medellín-Vergara},
@@ -346,7 +360,8 @@ note = "{\url{https://doi.org/10.3390/app10196846}}"
 	VOLUME = {10},
 	YEAR = {2020},
 	month = {4},
-	note = "{\url{https://doi.org/10.3390/app10082758}, Article ID: \textbf{applsci-759087}, \textbf{{ISSN:  2076-3417}}}",
+    doi={10.3390/app10082758},
+	note = "{Article ID: \textbf{applsci-759087}, \textbf{{ISSN:  2076-3417}}}",
 }
 
 % LatinINdex
