--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -1,5 +1,16 @@
 % Encoding: UTF-8
 
+@unpublished{Platica_Taller_2025e,
+    author       = {},
+    title        = {Desarrolllo de Juegos para Teléfonos Inteligentes en Android},
+    year = 2025,
+    month = 11,
+    day = 14,
+    addendum     = {Jornadas de Ciencia y Tecnología/5a Semana Nacional del Conocimiento y la Innovación}
+}
+
+
+
 @unpublished{Platica_Taller_2025d,
     author       = {},
     title        = {Demostración de Proyectos de Realidad Aumentada y Virtual},
