--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -57,7 +57,7 @@
 }
 
 @Misc{TesisUPV2025-07,
-  Title                    = {\textit{Desarrolllo de modulo en el sistema integral del departamento de compras y del área juridica}},
+  Title                    = {\textit{Desarrollo de modulo en el sistema integral del departamento de compras y del área juridica}},
   HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
   Month                    = {8},
   Author                   = {{José Guadalupe Martínez Herrera}},
@@ -65,6 +65,53 @@
 }
 
 
+@Misc{TesisUPV2025-08,
+  Title                    = {\textit{Segunda fase de desarrollo para el Sistema de Declaraciones Patrimoniales de la Auditoría Superior del Estado de Tamaulipas}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{Luis Antonio Raga Reyes }},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-09,
+  Title                    = {\textit{Diseño e implementación de un sistema web para la gestión de sistemas de ciencia de datos como proyecto de investigación en CINVESTAV Tamaulipas}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{Ximena Abigail Moreno Ledesma  }},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-10,
+  Title                    = {\textit{Diseño e implementación de un middleware para la interoperabilidad entre la plataforma Nez y el concentrador de servicios Jub}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{ Jose Manuel Alonso Cepeda}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-11,
+  Title                    = {\textit{Módulo de gestión de proyectos, tareas y calendario para la plataforma EMP(Enterprise Management Portal) de SVAM International de Mexico}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{Osiel Alejandro Olivo De Leon}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-12,
+  Title                    = {\textit{Aplicacion de Escritorio para la Gestion de una Escuela}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{Jose Daniel Zamudio Jimenez}},
+  Year                     = {2025}
+}
+
+@Misc{TesisUPV2025-13,
+  Title                    = {\textit{ Diseño e Implementación de un Servicio API para la Indexación y Recuperación de Productos Generados en Sistemas de Ciencia de Datos con el Enfoque FAIR}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {12},
+  Author                   = {{Ricardo Emmanuel Uriegas Ibarra}},
+  Year                     = {2025}
+}
 
 
 
