--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{111}
+\setcounter{conteoarticulos}{112}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -14,6 +14,8 @@
 \multicolumn{3}{c}{Continúa en la siguiente página} \\ 
 \endfoot 
 \endlastfoot 
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2026_02_01}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_21}&\\ \hline 
