--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,20 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+
+@article{MarcoNuno_Revista_2026_02_01,
+title = {Mobile2D-3D-RoboticSim: A robotic platform for computational thinking assessment in STEM and STEAM education},
+journal = {SoftwareX},
+volume = {33},
+pages = {102473},
+year = {2026},
+issn = {2352-7110},
+doi = {https://doi.org/10.1016/j.softx.2025.102473},
+url = {https://www.sciencedirect.com/science/article/pii/S235271102500439X},
+author = {José Hugo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda} and Melchor Hernández-Díaz and José de Jesús Rangel-Magdaleno and Yahir Hernández-Mier},
+keywords = {Educational technology, Mobile applications, Mobile learning, Robot programming, Systems simulation, Virtual prototyping}
+}
+
 @Article{MarcoNuno_Revista_2025_10_28,
     author = {\textbf{M. A. Nuño-Maganda}  and Amador-Cano, Gerardo and Hernández-Mier, Yahir and Saenz-Aguilar, Yessil Varinka and Polanco-Martagón, Said},
     title = {Automatic Detection and Counting of Nannochloropsis oceanica Microalgae: A Comparative Study of Classical Machine Learning Versus Deep Learning–Based Approaches},
