--- a/Revistas.bib
+++ b/Revistas.bib
@@ -3,7 +3,7 @@
 
 
 @article{MarcoNuno_Revista_2026_02_01,
-title = {Mobile2D-3D-RoboticSim: A robotic platform for computational thinking assessment in STEM and STEAM education},
+title = {{Mobile2D-3D-RoboticSim: A robotic platform for computational thinking assessment in STEM and STEAM education}},
 journal = {SoftwareX},
 volume = {33},
 pages = {102473},
@@ -16,7 +16,7 @@ keywords = {Educational technology, Mobile applications, Mobile learning, Robot 
 
 @Article{MarcoNuno_Revista_2025_10_28,
     author = {\textbf{M. A. Nuño-Maganda}  and Amador-Cano, Gerardo and Hernández-Mier, Yahir and Saenz-Aguilar, Yessil Varinka and Polanco-Martagón, Said},
-    title = {Automatic Detection and Counting of Nannochloropsis oceanica Microalgae: A Comparative Study of Classical Machine Learning Versus Deep Learning–Based Approaches},
+    title = {{Automatic Detection and Counting of Nannochloropsis oceanica Microalgae: A Comparative Study of Classical Machine Learning Versus Deep Learning–Based Approaches}},
     journal = {Aquaculture, Fish and Fisheries},
     volume = {5},
     number = {6},
@@ -31,7 +31,7 @@ keywords = {Educational technology, Mobile applications, Mobile learning, Robot 
 % JCR
 @Article{MarcoNuno_Revista_2025_10_21,
     AUTHOR = {Said Polanco-Martagón  and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and José Hugo Barrón-Zambrano and Andrea Magadán-Salazar and César Alejandro Medellín-Vergara},
-    TITLE = {Comparison of Deep Neural Networks for the Classification of Adventitious Lung Sounds},
+    TITLE = {{Comparison of Deep Neural Networks for the Classification of Adventitious Lung Sounds}},
     JOURNAL = {Journal of Clinical Medicine},
     VOLUME = {14},
     YEAR = {2025},
