--- a/TesisDirigidasMaestria.bib
+++ b/TesisDirigidasMaestria.bib
@@ -1,9 +1,27 @@
+@Misc{TesisJuanEduardoTovar,
+Author = {{Juan Eduardo Tovar Díaz}},
+title     =     {\textit{Reconicimiento de Anomalías Cardíacas Mediante Aprendizaje Profundo en Espectogramas MFCC de Fonocardiogramas}},
+HOWPUBLISHED = {Tesis de Maestría en Ingeniería, Universidad Politécnica de Victoria},
+Year = 2025,
+month={12}}
+
+
+@Misc{TesisLuisAntonioGonzalezCastro,
+Author = {{Luis Antonio Gonzalez Castro}},
+title     =     {\textit{Clasificación de Sonidos Pulmonares Mediante una Arquitectura Híbrida basada en MobileNETV1 y AutoML}},
+HOWPUBLISHED = {Tesis de Maestría en Ingeniería, Universidad Politécnica de Victoria},
+Year = 2025,
+month={12}}
+
+
+
 @Misc{TesisHomeroSimpson,
 Author = {{Homero Pérez Mata}},
 title     =     {\textit{Sistema de supervisión de aeroponía autónomo mediante el uso de TinyML}},
 HOWPUBLISHED = {Tesis de Maestría en Ingeniería, Universidad Politécnica de Victoria},
 Year = 2024,
 month={12}}
+
 
 
 @Misc{TesisJuanEduardo,
