--- a/Revistas.bib
+++ b/Revistas.bib
@@ -14,6 +14,21 @@ author = {José Hugo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda} and Melch
 keywords = {Educational technology, Mobile applications, Mobile learning, Robot programming, Systems simulation, Virtual prototyping}
 }
 
+
+
+@Article{MarcoNuno_Revista_2026_01_03,
+AUTHOR = {Hernández-Mier, Yahir and \textbf{M. A. Nuño-Maganda} and Polanco-Martagón, Said and Cantú-Castro, Ángel Dagoberto and Posada-Gómez, Rubén and Barrón-Zambrano, José Hugo},
+TITLE = {Machine Learning and Queuing Algorithm Integration for Real-Time Citrus Size Classification on an Industrial Sorting Machine},
+JOURNAL = {Processes},
+VOLUME = {14},
+YEAR = {2026},
+NUMBER = {1},
+ARTICLE-NUMBER = {164},
+ISSN = {2227-9717},
+DOI = {10.3390/pr14010164}
+}
+
+
 @Article{MarcoNuno_Revista_2025_10_28,
     author = {\textbf{M. A. Nuño-Maganda}  and Amador-Cano, Gerardo and Hernández-Mier, Yahir and Saenz-Aguilar, Yessil Varinka and Polanco-Martagón, Said},
     title = {{Automatic Detection and Counting of Nannochloropsis oceanica Microalgae: A Comparative Study of Classical Machine Learning Versus Deep Learning–Based Approaches}},
