--- a/ListaGlobalPublicaciones/Tabla.tex
+++ b/ListaGlobalPublicaciones/Tabla.tex
@@ -1,6 +1,6 @@
 %Lista Articulos
 \newcounter{conteoarticulos}
-\setcounter{conteoarticulos}{112}
+\setcounter{conteoarticulos}{113}
 \begin{longtable}{p{0.5cm}|p{14.0cm}|p{2cm}}
 \hline
 \textbf{\#} &
@@ -15,6 +15,8 @@
 \endfoot 
 \endlastfoot 
 \theconteoarticulos&\fullcite{MarcoNuno_Revista_2026_02_01}&\\ \hline 
+\addtocounter{conteoarticulos}{-1}
+\theconteoarticulos&\fullcite{MarcoNuno_Revista_2026_01_03}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
 \theconteoarticulos&\fullcite{MarcoNuno_CongArbIng_2025-10.1007/978-3-031-97907-1_20}&\\ \hline 
 \addtocounter{conteoarticulos}{-1}
