--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -93,7 +93,7 @@ citecolor=green]{hyperref}
 
 
 
-\usepackage[backend=biber,sorting=ddatent,style=ieee, defernumbers=true, natbib=true, isbn=true, maxnames=99, maxbibnames=99]{biblatex}
+\usepackage[backend=biber,sorting=ddatent,style=ieee, date=year, defernumbers=true, natbib=true, isbn=true, maxnames=99, maxbibnames=99]{biblatex}
 
 \DeclareSortingScheme{ddatent}{
     \sort{
