--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -92,7 +92,7 @@ citecolor=green]{hyperref}
 
 
 
-
+% To compile List of Courses, add the option "date=year" in biblatex
 \usepackage[backend=biber,sorting=ddatent,style=ieee, date=year, defernumbers=true, natbib=true, isbn=true, maxnames=99, maxbibnames=99]{biblatex}
 
 \DeclareSortingScheme{ddatent}{
