--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -2,7 +2,7 @@
     title   = {Programación de Sistemas I},
     year    = {2005},
     month = 06,
-    howpublished = {ITSA — ene-jun 05}
+    howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:SeminarioSistemasDigitales:2005julago,
@@ -11,7 +11,7 @@
     howpublished = {ITSA},
     month = 08,
 
-  howpublished = {ITSA — jul-ago 05}
+  howpublished = {ITSA — jul-ago}
 }
 
 @unpublished{teach:ITSA:SistemasDigitales:2005agodic,
@@ -20,7 +20,7 @@
     howpublished = {ITSA},
     month = 12,
 
-  howpublished = {ITSA — ago-dic 05}
+  howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasII:2005agodic,
@@ -28,7 +28,7 @@
   year    = {2005},
     howpublished = {ITSA},
     month = 12,
-  howpublished = {ITSA — ago-dic 05}
+  howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasI:2006enejun,
@@ -36,7 +36,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 06,
-  howpublished = {ITSA — ene-jun 06}
+  howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasII:2006enejun,
@@ -44,7 +44,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 06,
-  howpublished = {ITSA — ene-jun 06}
+  howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:ProgramacionSistemasI:2006julago,
@@ -52,7 +52,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 08,
-  howpublished = {ITSA — jul-ago 06}
+  howpublished = {ITSA — jul-ago}
 }
 
 @unpublished{teach:ITSA:LenguajeEnsamblador:2006agodic,
@@ -60,7 +60,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 12,
-  howpublished = {ITSA — ago-dic 06}
+  howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:UPP:HerramientasOfimaticas:2006sepdic,
@@ -68,7 +68,7 @@
   year    = {2006},
     howpublished = {UPP},
     month = 12,
-  howpublished = {UPP — sep-dic 06}
+  howpublished = {UPP — sep-dic}
 }
 
 @unpublished{teach:UPP:ArquitecturasAvanzadas:2006sepdic,
@@ -76,7 +76,7 @@
   year    = {2006},
     howpublished = {UPP},
     month = 12,
-  howpublished = {UPP — sep-dic 06}
+  howpublished = {UPP — sep-dic}
 }
 
 @unpublished{teach:ITSA:Interfases:2007enejun,
@@ -84,119 +84,119 @@
   year    = {2007},
     howpublished = {ITSA},
     month = 06,
-  howpublished = {ITSA — ene-jun 07}
+  howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:LenguajeEnsamblador:2007agodic,
   title   = {Lenguaje Ensamblador},
   year    = {2007},
     month = 12,
-    howpublished = {ITSA — ago-dic 07}
+    howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:GraficacionComputadora:2007agodic,
   title   = {Graficación por Computadora},
   year    = {2007},
     month = 12,
-    howpublished = {ITSA — ago-dic 07}
+    howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:Interfases:2008enejun,
   title   = {Interfases},
   year    = {2008},
     month = 06,
-    howpublished = {ITSA — ene-jun 08}
+    howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:InteligenciaArtificial:2008enejun,
   title   = {Inteligencia Artificial},
   year    = {2008},
     month = 06,
-    howpublished = {ITSA — ene-jun 08}
+    howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:LenguajeEnsamblador:2008agodic,
   title   = {Lenguaje Ensamblador},
   year    = {2008},
     month = 12,
-    howpublished = {ITSA — ago-dic 08}
+    howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:GraficacionComputadora:2008agodic,
   title   = {Graficación por Computadora},
   year    = {2008},
     month = 12,
-    howpublished = {ITSA — ago-dic 08}
+    howpublished = {ITSA — ago-dic}
 }
 
 @unpublished{teach:ITSA:Interfases:2009enejun,
   title   = {Interfases},
   year    = {2009},
     month = 06,
- howpublished = {ITSA — ene-jun 09}
+ howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:ITSA:InteligenciaArtificial:2009enejun,
   title   = {Inteligencia Artificial},
   year    = {2009},
     month = 06,
- howpublished = {ITSA — ene-jun 09}
+ howpublished = {ITSA — ene-jun}
 }
 
 @unpublished{teach:UPV:CircuitosLogicos:2009sepdic,
   title   = {Circuitos Lógicos},
   year    = {2009},
     month = 12,
- howpublished = {UPV — sep-dic 09}
+ howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:OrganizacionComputadoras:2009sepdic,
   title   = {Organización de Computadoras},
   year    = {2009},
     month = 12,
- howpublished = {UPV — sep-dic 09}
+ howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:POO:2009sepdic,
   title   = {Programación Orientada a Objetos},
   year    = {2009},
     month = 12,
-    howpublished = {UPV — sep-dic 09}
+    howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:POO:2010eneabr,
   title   = {Programación Orientada a Objetos},
   year    = {2010},
     month = 04,
-  howpublished = {UPV — ene-abr 10}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ArquitecturaProcesadores:2010eneabr,
   title   = {Arquitectura de Procesadores},
   year    = {2010},
     month = 04,
-  howpublished = {UPV — ene-abr 10}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2010mayago,
   title   = {Sistemas Embebidos},
   year    = {2010},
     month = 08,
-  howpublished = {UPV — may-ago 10}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:SistemasOperativos:2010mayago,
   title   = {Sistemas Operativos},
   year    = {2010},
     month = 08,
-      howpublished =  {UPV — may-ago 10}
+      howpublished =  {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ArquitecturaProcesadores:2010mayago,
   title   = {Arquitectura de Procesadores},
   year    = {2010},
     month = 08,
-    howpublished =  {UPV — may-ago 10}
+    howpublished =  {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2011mayago,
