--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -203,413 +203,413 @@
   title   = {Sistemas Embebidos},
   year    = {2011},
     month = 08,
-    howpublished = {UPV — may-ago 11}
+    howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ArquitecturaProcesadores:2011agodic,
   title   = {Arquitectura de Procesadores},
   year    = {2011},  
     month = 12,
-    howpublished = {UPV — ago-dic 11}
+    howpublished = {UPV — ago-dic}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2011agodic,
   title   = {Sistemas Embebidos},
   year    = {2011},
   month = 12,
-  howpublished = {UPV — ago-dic 11}
+  howpublished = {UPV — ago-dic}
 }
 
 @unpublished{teach:UPV:ArquitecturaProcesadores:2012eneabr,
   title   = {Arquitectura de Procesadores},
   year    = {2012},
     month = 04,
-  howpublished = {UPV — ene-abr 12}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2012mayago,
   title   = {Sistemas Embebidos},
   year    = {2012},
     month = 08,
-  howpublished = {UPV — may-ago 12}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2012agodic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2012},
     month = 12,
-  howpublished = {UPV — ago-dic 12}
+  howpublished = {UPV — ago-dic}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2013eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2013},
     month = 04,
-  howpublished = {UPV — ene-abr 13}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2013eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2013},
     month = 04,
-  howpublished = {UPV — ene-abr 13}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2013mayago,
   title   = {Graficación por Computadora Avanzada},
   year    = {2013},
     month = 08,
-  howpublished = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2013mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2013},
     month = 08,
-  howpublished = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2013mayago,
   title   = {Sistemas Embebidos},
   year    = {2013},
     month = 08,
-  howpublished = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2013sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2013},
     month = 12,
-  howpublished = {UPV — sep-dic 13}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2014eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2014},
     month = 04,
-  howpublished = {UPV — ene-abr 14}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ProcesamientoParalelo:2014eneabr,
   title   = {Procesamiento Paralelo y Distribuido},
   year    = {2014},
     month = 04,
-  howpublished = {UPV — ene-abr 14}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2014mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2014},
     month = 08,
-  howpublished = {UPV — may-ago 14}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2014mayago,
   title   = {Sistemas Embebidos},
   year    = {2014},
     month = 08,
-  howpublished = {UPV — may-ago 14}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2014sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2014},
     month = 12,
-  howpublished = {UPV — sep-dic 14}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2015mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2015},
     month = 08,
-  howpublished = {UPV — may-ago 15}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2015sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2015},
     month = 12,
-  howpublished = {UPV — sep-dic 15}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2016eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2016},
     month = 04,
-  howpublished = {UPV — ene-abr 16}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2016mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2016},
     month = 08,
-  howpublished = {UPV — may-ago 16}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2016sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2016},
     month = 12,
-  howpublished = {UPV — sep-dic 16}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2017eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2017},
     month = 04,
-  howpublished = {UPV — ene-abr 17}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2017mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2017},
     month = 08,
-  howpublished = {UPV — may-ago 17}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2017sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2017},
     month = 12,
-  howpublished = {UPV — sep-dic 17}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2018eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2018},
     month = 04,
-  howpublished = {UPV — ene-abr 18}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2018eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2018},
     month = 04,
-  howpublished = {UPV — ene-abr 18}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2018mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2018},
     month = 08,
-  howpublished = {UPV — may-ago 18}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2018sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2018},
     month = 12,
-  howpublished = {UPV — sep-dic 18}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2019eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2019},
     month = 04,
-  howpublished = {UPV — ene-abr 19}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2019eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2019},
     month = 04,
-  howpublished = {UPV — ene-abr 19}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2019mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2019},
     month = 08,
-  howpublished = {UPV — may-ago 19}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2019sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2019},
     month = 12,
-  howpublished = {UPV — sep-dic 19}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2020eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2020},
     month = 04,
-  howpublished = {UPV — ene-abr 20}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2020eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2020},
     month = 04,
-  howpublished = {UPV — ene-abr 20}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:ULSA:AdquisicionImagenes:2020enemay,
   title   = {Adquisición y Procesamiento de Imágenes},
   year    = {2020},
     month = 05,
-  howpublished = {ULSA — ene-may 20}
+  howpublished = {ULSA — ene-may}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2020mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2020},
     month = 08,
-  howpublished = {UPV — may-ago 20}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2020sepdic,
   title   = {Lenguajes y Autómatas},
   year    = {2020},
     month = 12,
-  howpublished = {UPV — sep-dic 20}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:FPOO:2021eneabr,
   title   = {Fundamentos de Programación Orientada a Objetos},
   year    = {2021},
     month = 04,
-  howpublished = {UPV — ene-abr 21}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2021mayago,
   title   = {Programación Móvil},
   year    = {2021},
     month = 08,
-  howpublished = {UPV — may-ago 21}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2021sepdic,
   title   = {Lenguajes y Autómatas},
   year    = {2021},
     month = 12,
-  howpublished = {UPV — sep-dic 21}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2021sepdic,
   title   = {Programación Móvil},
   year    = {2021},
     month = 12,
-  howpublished = {UPV — sep-dic 21}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2022eneabr,
   title   = {Sistemas Inteligentes},
   year    = {2022},
     month = 04,
-  howpublished = {UPV — ene-abr 22}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2022mayago,
   title   = {Programación Móvil},
   year    = {2022},
     month = 08,
-  howpublished = {UPV — may-ago 22}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2022sepdic,
   title   = {Programación Móvil},
   year    = {2022},
     month = 12,
-  howpublished = {UPV — sep-dic 22}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:POO:2022sepdic,
   title   = {Programación Orientada a Objetos},
   year    = {2022},
     month = 12,
-  howpublished = {UPV — sep-dic 22}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2023eneabr,
   title   = {Lenguajes y Autómatas},
   year    = {2023},
     month = 04,
-  howpublished = {UPV — ene-abr 23}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2023mayago,
   title   = {Sistemas Inteligentes},
   year    = {2023},
     month = 08,
-  howpublished = {UPV — may-ago 23}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:FPOO:2023mayago,
   title   = {Fundamentos de Programación Orientada a Objetos},
   year    = {2023},
     month = 08,
-  howpublished = {UPV — may-ago 23}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2023sepdic,
   title   = {Programación Móvil},
   year    = {2023},
     month = 12,
-  howpublished = {UPV — sep-dic 23}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2024eneabr,
   title   = {Lenguajes y Autómatas},
   year    = {2024},
     month = 04,
-  howpublished = {UPV — ene-abr 24}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2024eneabr,
   title   = {Programación Móvil},
   year    = {2024},
     month = 04,
-  howpublished = {UPV — ene-abr 24}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:POO:2024mayago,
   title   = {Programación Orientada a Objetos},
   year    = {2024},
     month = 08,
-  howpublished = {UPV — may-ago 24}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2024mayago,
   title   = {Sistemas Inteligentes},
   year    = {2024},
     month = 08,
-  howpublished = {UPV — may-ago 24}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2024sepdic,
   title   = {Programación Móvil},
   year    = {2024},
     month = 12,
-  howpublished = {UPV — sep-dic 24}
+  howpublished = {UPV — sep-dic}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2025eneabr,
   title   = {Sistemas Inteligentes},
   year    = {2025},
     month = 04,
-  howpublished = {UPV — ene-abr 25}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2025mayago,
   title   = {Programación Móvil},
   year    = {2025},
     month = 08,
-  howpublished = {UPV — may-ago 25}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:ProyectoIntegradorI:2025mayago,
   title   = {Proyecto Integrador I},
   year    = {2025},
     month = 08,
-  howpublished = {UPV — may-ago 25}
+  howpublished = {UPV — may-ago}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2025sepdic,
   title   = {Desarrollo de Aplicaciones Móviles},
   year    = {2025},
     month = 12,
-  howpublished = {UPV — sep-dic 25}
+  howpublished = {UPV — sep-dic}
 }
 
 % 2026
@@ -618,13 +618,13 @@
   title   = {Sistemas Inteligentes},
   year    = {2026},
     month = 04,
-  howpublished = {UPV — ene-abr 26}
+  howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
   title   = {Desarrollo de Aplicaciones Móviles},
   year    = {2026},
     month = 04,
-  howpublished = {UPV — ene-abr 26}
+  howpublished = {UPV — ene-abr}
 }
 
