--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,7 +1,7 @@
 @unpublished{Curso2025d,
     author       = {},
     title        = {El Nuevo Modelo Educativo 2024 para la transformación y consolidación de las Universidades del Subsistema Tecnológico},
-    howpublished = {Dirección General de las Universidades Tecnológicas y Politécnicas},
+    howpublished = {Dirección General de Universidades Tecnológicas y Politécnicas},
     year = 2025,
     month = 10}
 
