--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,3 +1,11 @@
+@unpublished{Curso2026a,
+    author       = {},
+    title        = {Python for Computer Vision with OpenCV and Deep Learning},  
+    howpublished = {Udemy},
+    year = 2026,
+    month = 02}
+
+
 @unpublished{Curso2025d,
     author       = {},
     title        = {El Nuevo Modelo Educativo 2024 para la transformación y consolidación de las Universidades del Subsistema Tecnológico},
